HTML + Css + Jquery actions. Need text review

--- a/public/index.html
+++ b/public/index.html
@@ -8,26 +8,156 @@
     <link rel="stylesheet" type="text/css" href="/css/styles.css">
 </head>
 <body>
-    <div id="header_logo">
+    <div class="header_logo" id="section1">
         <img src="/images/logo.jpg" height="150px">
         <p class="logo_text">VENTRONI ARQUITETURA</p> <!-- take out later -->
     </div>
 
-    <div id="nav_menu">
-        <ul>
-            <li> HOME </li>
-            <li> SOBRE O CURSO </li>
-            <li> MATRICULA </li>
-        </ul>
+    <div class="nav_menu">
+            <a href="#section1"><p> HOME </p></a>
+            <a href="#section2"><p> SOBRE O CURSO </p></a>
+            <a href="#section3"><p> REVIT </p></a>
+            <a href="#section4"><p> MATRICULA </p></a>
+            <a href="#section5"><p> CONTATO </p></a>
     </div>
 
     <div id="container">
         <div id="container_info">
-            <h1>Curso de Revit 2017</h1>
-            <p>Curso básico + projeto prefeitura</p>
+            <h1>Aprenda a criar e gerenciar projetos em Revit</h1>
+            <h2>Software mais moderno para projetos arquitetonicos e engenahria civil</h2>
         </div>
+    </div>
+
+    <div class="under_container" id="section2">
+        <h1 class="text_section"><span class="text_white">Curso de Revit Architecture + Projeto de Prefeitura</span></h1>
+        <h2>Turma aberta para janeiro de 2017</h3>
+    </div>
+
+    <div class="more_info">
+        <div class="box_info">
+            <img src="/images/icons/Calendar-104.png" height="75px" class="box_info_img">
+            <p>Início da aulas dia 07 de Janeiro</p>
+        </div>
+        <div class="box_info">
+            <img src="/images/icons/clock-100.png" height="75px" class="box_info_img">
+            <p>Aulas aos sábados da 13h30 horas ás 17h00 horas</p>
+        </div>
+        <div class="box_info">
+            <img src="/images/icons/Module-100.png" height="75px" class="box_info_img">
+            <p>Módulo básico com duração de 21 horas</p>
+        </div>
+        <div class="box_info">
+            <img src="/images/icons/Classroom-100.png" height="75px" class="box_info_img">
+            <p>Salas amplamente equipadas</p>
+        </div>
+        <div class="box_info">
+            <img src="/images/icons/Diploma-100.png" height="75px" class="box_info_img">
+            <p>Curso com certificado reconhecido pela ABED</p>
+        </div>
+    </div>
+
+<div class="bars"></div>
+    <div class="question" id="section3">
+        <img src="/images/icons/AskQuestion-100.png">
+        <div class="text_question">
+            <p class="revit_does"> O QUE <br> O REVIT <br> FAZ? </P>
+        </div>
+        <img src="/images/icons/AskQuestion-100.png">
+    </div>
+<div class="bars"></div>
+
+
+
+    <div class="about_revit">
+        <div class="text_revit">
+            <div class="text_revit2">
+                <h1> REVIT ARCHITECTURE </h1>
+                <p>O Revit é um software de tecnologia BIM (Building Information Modeling ou Modelagem de Informação da Construção) é uma das novidades mais promissoras dentro do mercado de Arquitetura, Engenharia e Construção. Este conceito envolve o gerenciamento de informações dentro de um edifício, desde a fase inicial de projeto, criando um modelo digital que abrange todo o ciclo de vida da edificação.<br>
+                Dentro de um projeto em Revit qualquer alteração nos componentes de projeto gera automaticamente a alteração dos documentos 2D (plantas, cortes, elevações), criando desenhos consistentes e completos.<br>
+                O curso apresenta a interface, os conceitos de tecnologia BIM  e ensina a projetar diretamente no software, em 3D, criando paredes, portas, janelas, estrutura, telhado e demais dados. Aprenda a utilizar o sistema de famílias do Revit, fundamental para que se realize um projeto paramétrico de forma simples, veja como fazer a documentação em 2D, gerando plantas, cortes e fachadas, utilizando cotas, criando tabelas e organizando a prancha de plotagem.</p>
+            </div>
+        </div>
+        <div id="revit_imgs_box">
+            <img src="/images/Narrabeen_3_6ec39d8c.jpg" height="300px" class="revit_img">
+            <img src="/images/Revit_5735805.jpg" height="300px" class="revit_img">
+            <img src="/images/14.jpg" height="300px" class="revit_img">
+            <img src="/images/maxresdefault.jpg" height="300px" class="revit_img">
+            <img src="/images/architecture_design___preview_render_by_bm23-d5mlked.png" height="300px" class="revit_img">
+        </div>
+    </div>
+    <div class="bars"></div>
+
+
+
+<div class="matricula" id="section4">
+    <h1 class="text_section"><span class="text_white"> INSCRIVA-SE, VAGAS LIMITADAS </span></h1>
+
+    <div id="price">
+        <div class="price_total">
+            <h1 class="text_section"><span class="text_selection_reais">R$650,00</span></h1>
+            <p><span class="text_selection_body">O curso pode ser parcelado em até</span></br>
+                <div id="number_high_box"><span class="number_high">12x</span></div></p>
+        </div>
+        <div class="price_total">
+        <p><span class="text_selection_body_down">Nos cartões de crédito através do PagSeguro.</span></p>
+        <p><span class="text_selection_body_down">Caso tenha interesse em outras condições de pagamento, </br>
+        entrar em contato para verificar as outras opções de pagamento</span></p>
+        </div>
+    </div>
+
+    <div class="bars_white"></div>
+
+
+    <div class="subscribe">
+        <div class="subscibe_box">
+            <h1 class="text_section"><span class="text_white"> PASSO A PASSO </span></h1>
+            <div class="intruction_box">
+                <div id="number_high_box_min"><span class="number_high_min">1</span></div>
+                <p class="instruction_text">Para se matricular efetue o pagamento no botão Comprar com PagSeguro. Ao clicar em pagar com PagSeguro, </br>você será redirecionado para o site PagSeguro com total seguranca para o pagamento.</p>
+            </div>
+            <div class="intruction_box">
+                <div id="number_high_box_min"><span class="number_high_min">2</span></div>
+                <p class="instruction_text">Após efetuado o pagamento, você receberá o comprovante de pagamento do PagSeguro. </br>
+                Após confirmado o pagamento seremos notificados pela PagSeguro sobre o pagamento junto com os dados do aluno.</br>
+                Após identificado o pagamento, você receberá por email o comprovante de incrição no Curso</br>
+                de Revit Architecture + Projeto de Prefeitura.</br></p>
+            </div>
+        <div>
+            <form action="https://pagseguro.uol.com.br/checkout/v2/payment.html" method="post">
+                <!-- NÃO EDITE OS COMANDOS DAS LINHAS ABAIXO -->
+                <input type="hidden" name="code" value="706C955BFCFC58ECC48B6FB23D045822" />
+                <input type="hidden" name="iot" value="button" />
+                <input type="image" src="https://stc.pagseguro.uol.com.br/public/img/botoes/pagamentos/209x48-comprar-roxo-assina.gif" name="submit" alt="Pague com PagSeguro - é rápido, grátis e seguro!" />
+            </form>
+        </div>
+    </div>
+
+</div>
+</div>
+
+    <div class="footer" id="section5">
+        <div id="footer_texts">
+            <p>Contato: <span class="text_white">(14) 99710-1193</span></br>
+                E-mail: <span class="text_white"><a href="mailto:youremailaddress">ventronearquitetura@hotmail.com</a></span></br>
+                <span class="text_white">Colégio Avançar</span></br>
+                Endereço: <span class="text_white">Av. República, n°423 </span></br>
+                <span class="text_white">Marília-SP</span></p>
+        </div>
+        <div id="map"></div>
+    </div>
+
+
+    <div id="signature">
+        <p> <a href="http://github.com/guilhermedelucas" class="icon_footer">Designed and coded by Guilherme Gomes de Lucas |</a>
+        <a href="https://icons8.com/web-app/22/Calendar" class="icon_footer">Icons by Icons8</a> </p>
     </div>
 
 
 </body>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.js"></script>
+<script type="text/javascript" src="/scripts/jquery.easing.1.3.js"></script>
+<script type="text/javascript"src="/scripts/maps.js"></script>
+<script type="text/javascript"src="/scripts/scripts.js"></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBZl2GNLs-1fZEe7jOvsiA4Umi1smZoUGA&callback=initMap"
+  async defer></script>
 </html>
