Add responsive for less than 1280px, changed all the pictures, ready to deploy

--- a/public/index.html
+++ b/public/index.html
@@ -8,27 +8,27 @@
     <link rel="stylesheet" type="text/css" href="/css/styles.css">
 </head>
 <body>
-    <div class="header_logo" id="section1">
-        <img src="/images/logo.jpg" height="150px">
+    <div class="header_logo" id="home">
+        <img src="/images/logo.jpg" id="logo">
         <p class="logo_text">VENTRONI ARQUITETURA</p> <!-- take out later -->
     </div>
 
     <div class="nav_menu">
-            <a href="#section1"><p> HOME </p></a>
-            <a href="#section2"><p> SOBRE O CURSO </p></a>
-            <a href="#section3"><p> REVIT </p></a>
-            <a href="#section4"><p> MATRICULA </p></a>
-            <a href="#section5"><p> CONTATO </p></a>
+            <a href="#home"><p> HOME </p></a>
+            <a href="#about"><p> SOBRE O CURSO </p></a>
+            <a href="#revit"><p> REVIT </p></a>
+            <a href="#matricula"><p> MATRÍCULA </p></a>
+            <a href="#contato"><p> CONTATO </p></a>
     </div>
 
     <div id="container">
         <div id="container_info">
             <h1>Aprenda a criar e gerenciar projetos em Revit</h1>
-            <h2>Software mais moderno para projetos arquitetonicos e engenahria civil</h2>
+            <h2>Software mais moderno para projetos arquitetônicos e engenharia civil</h2>
         </div>
     </div>
 
-    <div class="under_container" id="section2">
+    <div class="under_container" id="about">
         <h1 class="text_section"><span class="text_white">Curso de Revit Architecture + Projeto de Prefeitura</span></h1>
         <h2>Turma aberta para janeiro de 2017</h3>
     </div>
@@ -40,7 +40,7 @@
         </div>
         <div class="box_info">
             <img src="/images/icons/clock-100.png" height="75px" class="box_info_img">
-            <p>Aulas aos sábados da 13h30 horas ás 17h00 horas</p>
+            <p>Aulas aos sábados das 13h30 ás 17h00</p>
         </div>
         <div class="box_info">
             <img src="/images/icons/Module-100.png" height="75px" class="box_info_img">
@@ -52,17 +52,17 @@
         </div>
         <div class="box_info">
             <img src="/images/icons/Diploma-100.png" height="75px" class="box_info_img">
-            <p>Curso com certificado reconhecido pela ABED</p>
+            <p>Curso com certificado reconhecido pela <a href="http://www.abed.org.br/"><b>ABED</b></a></p>
         </div>
     </div>
 
 <div class="bars"></div>
-    <div class="question" id="section3">
-        <img src="/images/icons/AskQuestion-100.png">
+    <div class="question" id="revit">
+        <img src="/images/icons/AskQuestion-100.png" class="box_info_img">
         <div class="text_question">
             <p class="revit_does"> O QUE <br> O REVIT <br> FAZ? </P>
         </div>
-        <img src="/images/icons/AskQuestion-100.png">
+        <img src="/images/icons/AskQuestion-100.png" class="box_info_img">
     </div>
 <div class="bars"></div>
 
@@ -78,18 +78,17 @@
             </div>
         </div>
         <div id="revit_imgs_box">
-            <img src="/images/Narrabeen_3_6ec39d8c.jpg" height="300px" class="revit_img">
-            <img src="/images/Revit_5735805.jpg" height="300px" class="revit_img">
-            <img src="/images/14.jpg" height="300px" class="revit_img">
-            <img src="/images/maxresdefault.jpg" height="300px" class="revit_img">
-            <img src="/images/architecture_design___preview_render_by_bm23-d5mlked.png" height="300px" class="revit_img">
+            <img src="/images/revit00.jpg" class="revit_img">
+            <img src="/images/revit01.jpg" class="revit_img">
+            <img src="/images/revit02.jpg" class="revit_img">
+            <img src="/images/revit03.jpg" class="revit_img">
         </div>
     </div>
     <div class="bars"></div>
 
 
 
-<div class="matricula" id="section4">
+<div class="matricula" id="matricula">
     <h1 class="text_section"><span class="text_white"> INSCRIVA-SE, VAGAS LIMITADAS </span></h1>
 
     <div id="price">
@@ -135,10 +134,10 @@
 </div>
 </div>
 
-    <div class="footer" id="section5">
+    <div class="footer" id="contato">
         <div id="footer_texts">
             <p>Contato: <span class="text_white">(14) 99710-1193</span></br>
-                E-mail: <span class="text_white"><a href="mailto:youremailaddress">ventronearquitetura@hotmail.com</a></span></br>
+                E-mail: <span class="text_white"><a href="mailto:ventronearquitetura@hotmail.com">ventronearquitetura@hotmail.com</a></span></br>
                 <span class="text_white">Colégio Avançar</span></br>
                 Endereço: <span class="text_white">Av. República, n°423 </span></br>
                 <span class="text_white">Marília-SP</span></p>
