Fix html tag closing problem

--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
 
     <div class="under_container" id="about">
         <h1 class="text_section"><span class="text_white">Curso de Revit Architecture + Projeto de Prefeitura</span></h1>
-        <h2>Turma aberta para janeiro de 2017</h3>
+        <h2>Turma aberta para janeiro de 2017</h2>
     </div>
 
     <div class="more_info">
@@ -39,7 +39,7 @@
             <p>Início da aulas dia 07 de Janeiro</p>
         </div>
         <div class="box_info">
-            <img src="/images/icons/clock-100.png" height="75px" class="box_info_img">
+            <img src="/images/icons/Clock-100.png" height="75px" class="box_info_img">
             <p>Aulas aos sábados das 13h30 ás 17h00</p>
         </div>
         <div class="box_info">
