--- a/public/index.html
+++ b/public/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Ventroni Arquitetura</title>
+    <title>Ventrone Arquitetura</title>
     <link rel="stylesheet" type="text/css" href="/css/styles.css">
 </head>
 <body>
     <div class="header_logo" id="home">
         <img src="/images/logo.jpg" id="logo">
-        <p class="logo_text">VENTRONI ARQUITETURA</p> <!-- take out later -->
+        <p class="logo_text">VENTRONE ARQUITETURA</p> <!-- take out later -->
     </div>
 
     <div class="nav_menu">
