Corrections on the texts Sketchup

--- a/public/index.html
+++ b/public/index.html
@@ -131,7 +131,7 @@
                 </div>
                 <div  class="about-text">
                     <h1 class="about-title"> SketchUp e V-ray </h1>
-                    <p class="about-text">O Revit é um software de tecnologia BIM (Building Information Modeling ou Modelagem de Informação da Construção) é uma das novidades mais promissoras dentro do mercado de Arquitetura, Engenharia e Construção. <br> Dentro de um projeto em Revit qualquer alteração nos componentes de projeto gera automaticamente a alteração dos documentos 2D (plantas, cortes, elevações), criando desenhos consistentes e completos.<br> O curso apresenta a interface, os conceitos de tecnologia BIM  e ensina a projetar diretamente no software, em 3D, criando paredes, portas, janelas, estrutura, telhado e demais dados.</p>
+                    <p class="about-text">O SketchUp é usado para criar elementos e cenários 3D com qualidade profissional. O programa permite construir cidades completas de um jeito divertido e interativo. O funcionamento do SketchUp é similar ao dos programas de desenho mais clássicos. A barra superior mostra a todo momento as ferramentas disponíveis para a criação de modelos tridimensionais. Unindo Sketchup com sua gigante biblioteca e o Vray o mais poderoso render de arquitetura, você ao final do curso estará desenvolvendo imagens realistas de seus projetos.</p>
                 </div>
             </div>
         </div>
